Resolves tdf#159531 - Indentation and spacing for comments

Change-Id: I3ce9dd5d399ce9ff1427de0c97a1227dab996d9b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163059
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>